# Python-Backend-Web-Development-Course--with-Django-

./: pyproject.toml
myapp/myapp/: settings.py  urls.py
myproject/myapp/: admin.py  models.py  urls.py  views.py
myproject/myapp/migrations/: 0001_initial.py  0002_pizzazz.py
myproject/myproject/: settings.py  urls.py
myproject/templates/: counter.html  hub.html  index.html  login.html  register.html
