[tool.poetry]
name = "python-backend-web-development-course--with-django-"
version = "0.1.0"
description = ""
authors = ["Tamir <37386851+tamireinhorn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
